# DatosDemograficos

./: .travis.yml  README.md  __init__.py  pyproject.toml  qa.json  requirements.txt
DatosDemograficos/: INE_tools.py  api.py  pyproject.toml  settings.py  webapp.py
DatosDemograficos/Datos/: INE_tools.py  settings.py
DatosDemograficos/static/: style.css
DatosDemograficos/templates/: ambos_pob_bar.html  hombre_pob_bar.html  hombre_pob_mapa.html  index.html  mujer_pob_bar.html  mujer_pob_mapa.html  non_valid.html  total_pob_bar.html  total_pob_mapa.html
DatosDemográficos/: api.py  pyproject.toml  webapp.py
HU/: HU0.md  HU1.md  HU2.md  HU3.1.md  HU3.2.md  HU3.3.md
tests/: test_integration.py  test_webapp.py
